...
          children: [
            const TextField(),
            const TextField(
              key: ValueKey('_TextFieldValueKey'),
            ),
            TextButton(
              key: const Key('_checkAccessButton'),
              style: getButtonStyle(),
              onPressed: () {
                Navigator.push(
                  context,
                  MaterialPageRoute(builder: (context) => MyAccess()),
                );
...
